--- a/Moveonthing/Agileproject/MOT/templates/educationprogram.html
+++ b/Moveonthing/Agileproject/MOT/templates/educationprogram.html
@@ -46,7 +46,7 @@
                         <th>Mã học phần</th>
                         <th>Tên học phần</th>
                         <th>Số tín chỉ</th>
-                        <th>Điểm</th>
+                        <!-- <th>Điểm</th> -->
                     </tr>
                 </thead>
                 <tbody>
@@ -56,7 +56,7 @@
                         <td>{{ course.mahp }}</td>
                         <td>{{ course.tenhp }}</td>
                         <td>{{ course.sotinchi}}</td>
-                        <td><a href="">Chi tiết</a></td>
+                        <!-- <td><a href="">Chi tiết</a></td> -->
                         
                     </tr>
                     {% endfor %}
