--- a/Moveonthing/Agileproject/MOT/templates/studentPoint.html
+++ b/Moveonthing/Agileproject/MOT/templates/studentPoint.html
@@ -97,7 +97,7 @@
                                     <button><i class="fa fa-edit"></i></button>
                                     {% for subject in subjects %}
                                         {% if subject.mahp == selected_subject %}
-                                    <a href="studentPoint/xoadiem/{{student.mssv}}/{{subject.mahp}}"><i class="fa fa-trash"></i></a>
+                                    <a href="studentPoint/xoadiem/{{student.mssv}}/{{subject.mahp}}" onclick="thongbao()"><i class="fa fa-trash"></i></a>
                                         {% endif %}
                                     {%endfor%}
                                 </td>
@@ -112,6 +112,12 @@
     </div>
     
     <script>
+       function thongbao(){
+            setTimeout(()=>{
+                alert('Đã xóa thành công ')
+            },2000)
+       }
+        
          function openForm() {
             document.getElementById("popupForm").style.display = "block";
         }
