--- a/Moveonthing/Agileproject/MOT/templates/studentPoint.html
+++ b/Moveonthing/Agileproject/MOT/templates/studentPoint.html
@@ -51,13 +51,13 @@
                         {% endfor %}
                     </select>
                     <!-- Thêm một input hidden để lưu giữ giá trị môn học được chọn -->
-
                     <input type="hidden" name="selected_subject" value="{{ selected_subject }}">
+
                     <!-- <button type="submit">Hiển Thị</button> -->
                 </form>
                 <div class="popup-form" id="addForm">
                     <h3>Thêm điểm sinh viên</h3>
-                    <form method="POST" id="addFormContent" style="margin-top: 10px;">
+                    <form method="POST" id="addFormContent" class="popupFormContent" style="margin-top: 10px;">
                         {% csrf_token %}
                         <input type="hidden" name="popup_form" value="true">
                         <input type="hidden" name="selected_subject" value="{{ selected_subject }}">
@@ -77,7 +77,7 @@
 
                 <div class="popup-form" id="updateForm">
                     <h3>Cập nhật điểm sinh viên</h3>
-                    <form method="POST" id="updateFormContent" style="margin-top: 10px;">
+                    <form method="POST" id="updateFormContent" class="popupFormContent" style="margin-top: 10px;">
                         {% csrf_token %}
                         <input type="hidden" name="popup_form" value="true">
                         <input type="hidden" name="selected_subject" value="{{ selected_subject }}">
@@ -101,7 +101,7 @@
                 
                 <h2 class="tlt-table">{% for subject in subjects %}
                     {% if subject.mahp == selected_subject %}
-                        <h2 name="mahp" value="{{subject.mahp}}" class="titlee">Danh sách điểm sinh viên môn "{{ subject.tenhp }}" năm học 2023-2024</h2>
+                        <h2 name="mahp" value="{{subject.mahp}}" class="titlee">DANH SÁCH ĐIỂM SINH VIÊN MÔN "{{ subject.tenhp | upper }}" NĂM HỌC 2023-2024</h2>
                     {% endif %}
                 {% endfor %}</h2>
                 <table>
@@ -172,20 +172,34 @@
         }
 
         $(document).ready(function() {
-            $('#subject').on('change', function() {
-                this.form.submit();
+            // Bắt sự kiện khi form pop-up submit
+            $('.popupFormContent').submit(function(event) {
+                event.preventDefault(); // Ngăn chặn hành động mặc định của form
+                var formData = $(this).serialize(); // Lấy dữ liệu từ form
+
+                // Gửi request POST đến server
+                $.post('', formData, function(data) {
+                    // Hiển thị thông điệp từ server
+                    alert(data.message);
+                });
             });
         });
-        window.onload = function() {
+
         var departmentSelect = document.getElementById('department');
         var subjectSelect = document.getElementById('subject');
         var instruction = document.getElementById('instruction');
         var addButton = document.querySelector('.add-button');
 
-        // Thiết lập sự kiện onchange cho cả hai ô select
-        departmentSelect.addEventListener('change', checkSelection);
-        subjectSelect.addEventListener('change', checkSelection);
+        window.onload = function() {
 
+            // Thiết lập sự kiện onchange cho cả hai ô select
+            departmentSelect.addEventListener('change', checkSelection);
+            subjectSelect.addEventListener('change', checkSelection);
+
+            
+            // Kiểm tra trạng thái ban đầu của các ô select khi tải trang
+            checkSelection();
+        };
         // Hàm kiểm tra giá trị của hai ô select
         function checkSelection() {
             if (departmentSelect.value && subjectSelect.value) {
@@ -204,10 +218,6 @@
                 instruction.style.display = 'block';
             }
         }
-
-        // Kiểm tra trạng thái ban đầu của các ô select khi tải trang
-        checkSelection();
-    };
     </script>
 </body>
 </html>
